- fixed footer on mobile - add menu button on mobile also to footer

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -358,3 +358,65 @@ button:hover {
 .lb-caption a {
   pointer-events: all;
 }
+
+#btn-menu {
+  display: flex;
+  padding: 0;
+  appearance: none;
+  border: 0;
+  background: none;
+}
+
+@media only screen and (min-width: 768px) {
+  #btn-menu {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+  }
+}
+
+.menubutton[href="#menuopen"] {
+  font-size: 0;
+}
+
+.menu {
+  visibility: hidden;
+  position: fixed;
+  right: -100vw;
+  top: 0;
+  z-index: 999;
+  background-color: #fff;
+  border-radius: 0 8px 8px 0;
+  height: 100%;
+  width: 100vw;
+  padding: 1rem;
+  transition: all 0.3s ease-in;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+}
+
+@media only screen and (min-width: 768px) {
+  .menu {
+    width: 25vw;
+  }
+}
+
+:target {
+  /* opacity: 1; */
+  visibility: visible;
+  right: 0;
+}
+
+.menubutton-close {
+  align-self: flex-end;
+}
+
+.menubutton-close,
+.menubutton-close svg {
+  width: 40px;
+  height: 40px;
+  /* color: var(--color-fg); */
+  font-size: 0;
+}
